# backend/controllers/requisition_controller.go
@@ -2,7 +2,6 @@ package controllers
 
 import (
 	"context"
-	"fmt"
 	"strconv"
 	"time"
 
@@ -14,6 +13,7 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// RequisitionController defines the struct for the user controller
 type RequisitionController struct {
 	client *ent.Client
 	router gin.IRouter
@@ -23,8 +23,8 @@ type Requisition struct {
 	User          int
 	Registerstore int
 	Drug          int
-	Added         string
 	Amount        int
+	Added         string
 }
 
 // CreateRequisition handles POST requests for adding requisition entities
@@ -86,11 +86,11 @@ func (ctl *RequisitionController) CreateRequisition(c *gin.Context) {
 	time, err := time.Parse(time.RFC3339, obj.Added)
 	rq, err := ctl.client.Requisition.
 		Create().
+		SetUser(u).
+		SetRegisterstore(rs).
+		SetDrug(d).
 		SetAmount(obj.Amount).
 		SetAddedTime(time).
-		SetDrug(d).
-		SetRegisterstore(rs).
-		SetUser(u).
 		Save(context.Background())
 
 	if err != nil {
@@ -186,87 +186,87 @@ func (ctl *RequisitionController) ListRequisition(c *gin.Context) {
 	c.JSON(200, requisitions)
 }
 
-// DeleteRequisition handles DELETE requests to delete a requisition entity
-// @Summary Delete a requisition entity by ID
-// @Description get requisition by ID
-// @ID delete-requisition
-// @Produce  json
-// @Param id path int true "Requisition ID"
-// @Success 200 {object} gin.H
-// @Failure 400 {object} gin.H
-// @Failure 404 {object} gin.H
-// @Failure 500 {object} gin.H
-// @Router /requisitions/{id} [delete]
-func (ctl *RequisitionController) DeleteRequisition(c *gin.Context) {
-	id, err := strconv.ParseInt(c.Param("id"), 10, 64)
-	if err != nil {
-		c.JSON(400, gin.H{
-			"error": err.Error(),
-		})
-		return
-	}
+// // DeleteRequisition handles DELETE requests to delete a requisition entity
+// // @Summary Delete a requisition entity by ID
+// // @Description get requisition by ID
+// // @ID delete-requisition
+// // @Produce  json
+// // @Param id path int true "Requisition ID"
+// // @Success 200 {object} gin.H
+// // @Failure 400 {object} gin.H
+// // @Failure 404 {object} gin.H
+// // @Failure 500 {object} gin.H
+// // @Router /requisitions/{id} [delete]
+// func (ctl *RequisitionController) DeleteRequisition(c *gin.Context) {
+// 	id, err := strconv.ParseInt(c.Param("id"), 10, 64)
+// 	if err != nil {
+// 		c.JSON(400, gin.H{
+// 			"error": err.Error(),
+// 		})
+// 		return
+// 	}
 
-	err = ctl.client.Requisition.
-		DeleteOneID(int(id)).
-		Exec(context.Background())
-	if err != nil {
-		c.JSON(404, gin.H{
-			"error": err.Error(),
-		})
-		return
-	}
+// 	err = ctl.client.Requisition.
+// 		DeleteOneID(int(id)).
+// 		Exec(context.Background())
+// 	if err != nil {
+// 		c.JSON(404, gin.H{
+// 			"error": err.Error(),
+// 		})
+// 		return
+// 	}
 
-	c.JSON(200, gin.H{"result": fmt.Sprintf("ok deleted %v", id)})
-}
+// 	c.JSON(200, gin.H{"result": fmt.Sprintf("ok deleted %v", id)})
+// }
 
-// UpdateRequisition handles PUT requests to update a requisition entity
-// @Summary Update a requisition entity by ID
-// @Description update requisition by ID
-// @ID update-requisition
-// @Accept   json
-// @Produce  json
-// @Param id path int true "Requisition ID"
-// @Param requisition body ent.Requisition true "Requisition entity"
-// @Success 200 {object} ent.Requisition
-// @Failure 400 {object} gin.H
-// @Failure 500 {object} gin.H
-// @Router /requisitions/{id} [put]
-func (ctl *RequisitionController) UpdateRequisition(c *gin.Context) {
-	id, err := strconv.ParseInt(c.Param("id"), 10, 64)
-	if err != nil {
-		c.JSON(400, gin.H{
-			"error": err.Error(),
-		})
-		return
-	}
+// // UpdateRequisition handles PUT requests to update a requisition entity
+// // @Summary Update a requisition entity by ID
+// // @Description update requisition by ID
+// // @ID update-requisition
+// // @Accept   json
+// // @Produce  json
+// // @Param id path int true "Requisition ID"
+// // @Param requisition body ent.Requisition true "Requisition entity"
+// // @Success 200 {object} ent.Requisition
+// // @Failure 400 {object} gin.H
+// // @Failure 500 {object} gin.H
+// // @Router /requisitions/{id} [put]
+// func (ctl *RequisitionController) UpdateRequisition(c *gin.Context) {
+// 	id, err := strconv.ParseInt(c.Param("id"), 10, 64)
+// 	if err != nil {
+// 		c.JSON(400, gin.H{
+// 			"error": err.Error(),
+// 		})
+// 		return
+// 	}
 
-	obj := ent.Requisition{}
-	if err := c.ShouldBind(&obj); err != nil {
-		c.JSON(400, gin.H{
-			"error": "Requisition binding failed",
-		})
-		return
-	}
-	obj.ID = int(id)
-	uq, err := ctl.client.Requisition.
-		UpdateOne(&obj).
-		Save(context.Background())
-	if err != nil {
-		c.JSON(400, gin.H{"error": "update failed"})
-		return
-	}
+// 	obj := ent.Requisition{}
+// 	if err := c.ShouldBind(&obj); err != nil {
+// 		c.JSON(400, gin.H{
+// 			"error": "Requisition binding failed",
+// 		})
+// 		return
+// 	}
+// 	obj.ID = int(id)
+// 	uq, err := ctl.client.Requisition.
+// 		UpdateOne(&obj).
+// 		Save(context.Background())
+// 	if err != nil {
+// 		c.JSON(400, gin.H{"error": "update failed"})
+// 		return
+// 	}
 
-	c.JSON(200, uq)
-}
+// 	c.JSON(200, uq)
+// }
 
 // NewRequisitionController creates and registers handles for the requisition controller
 func NewRequisitionController(router gin.IRouter, client *ent.Client) *RequisitionController {
-	rq := &RequisitionController{
+	rc := &RequisitionController{
 		client: client,
 		router: router,
 	}
-	rq.register()
-	return rq
+	rc.register()
+	return rc
 }
 
 // InitRequisitionController registers routes to the main engine
@@ -278,6 +278,5 @@ func (ctl *RequisitionController) register() {
 	// CRUD
 	requisitions.POST("", ctl.CreateRequisition)
 	requisitions.GET(":id", ctl.GetRequisition)
-	requisitions.PUT(":id", ctl.UpdateRequisition)
-	requisitions.DELETE(":id", ctl.DeleteRequisition)
+
 }
